# onmk-aeplugin-rust-template

./: .gitignore  Cargo.toml  README.ja.md  README.md
crates/ae_gpu_lab_cli/: Cargo.toml
crates/ae_gpu_lab_cli/src/: main.rs
crates/ae_gpu_lab_core/: Cargo.toml
crates/ae_gpu_lab_core/src/: backend.rs  cpu.rs  cpu_backend.rs  frame.rs  lib.rs  shader.wgsl  wgpu_backend.rs
crates/ae_gpu_lab_cuda/: Cargo.toml
crates/ae_gpu_lab_cuda/src/: lib.rs
crates/ae_gpu_lab_native_probe/: Cargo.toml
crates/ae_gpu_lab_native_probe/src/: lib.rs
crates/ae_gpu_lab_plugin/: Cargo.toml  build.rs
crates/ae_gpu_lab_plugin/src/: lib.rs
crates/ae_gpu_lab_probe_plugin/: Cargo.toml  build.rs
crates/ae_gpu_lab_probe_plugin/src/: cuda_driver.rs  lib.rs
crates/ae_gpu_lab_wgpu_hal_import/: Cargo.toml
crates/ae_gpu_lab_wgpu_hal_import/src/: d3d12.rs  lib.rs  metal.rs
docs/: effects.md  prior-art.md
scripts/: install-ae-plugin.ps1
tracks/01_smartfx_wgpu/: README.md
tracks/02_native_official_gpu_probe/: README.md
tracks/03_wgpu_hal_external_import/: README.md
