[package]
name = "ae_gpu_lab_probe_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ae_gpu_lab_native_probe = { path = "../ae_gpu_lab_native_probe" }
after-effects.workspace = true
libloading.workspace = true

[build-dependencies]
pipl.workspace = true
